# lingoplay

./: .gitignore  alembic.ini  lingoplay.db  main.py  pyproject.toml
src/: __init__.py  api.py  config.py  errors.py  main.py  models.py  repository.py
src/auth/: dependencies.py  models.py  repository.py  schemas.py  service.py  views.py
src/database/: core.py
src/database/revision/: env.py
src/database/revision/versions/: 0cc360d993be_postgres_public_schema.py  2276a549a33c_.py  4158c57ba78f_.py  6cc550c33e2d_videos_path_is_unique.py  77c1d9f2ef67_.py  a408ccc85331_.py  a61391c8841f_.py  bae6673a843a_.py  dada244bc5e4_.py
src/uploads/: dependencies.py  errors.py  models.py  repository.py  schemas.py  service.py  views.py
src/users/: dependencies.py  errors.py  models.py  repository.py  schemas.py  service.py  views.py
src/videos/: association_tables.py  dependencies.py  models.py  repository.py  schemas.py  service.py  views.py
tests/: conftest.py  constants.py
tests/auth/: test_auth.py
tests/fixtures/: auth.py  db.py  s3.py
tests/uploads/: test_uploads.py
