[project]
name = "lingoplay"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiobotocore>=2.23.0",
    "aiosqlite>=0.21.0",
    "alembic>=1.16.2",
    "asyncpg>=0.30.0",
    "authx>=1.4.3",
    "bcrypt>=4.3.0",
    "fastapi>=0.115.12",
    "pydantic[email]>=2.11.7",
    "pyjwt[crypto]>=2.10.1",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.41",
    "types-aiobotocore[essential]>=2.23.0",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.11.13",
]

[tool.ruff]
line-length = 124
target-version = "py312"
lint.extend-select = ["I", "F", "E", "W", "UP", "SIM", "B", "Q", "C4"]
fix = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
known-first-party = ["lingoplay"]
combine-as-imports = true
force-wrap-aliases = true

[tool.pytest.ini_options]
pythonpath = "src"